fixed spacing 3

--- a/src/Pages/Games.css
+++ b/src/Pages/Games.css
@@ -1,10 +1,11 @@
 .games_container{
     background-image: url(../assets/background.png);
     background-size: 100%;
-    height: 100%;
+    height: 95vh;
     width: 100%;
     position: absolute;
     top: 0;
+    padding-top: 5vh;
 }
 
 .games-content {
